[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "prompt-cache-warmer"
version = "0.1.0"
description = "Pre-warm Anthropic prompt cache before user traffic. Insert cache_control breakpoints, fire a tiny warmup call, verify the cache hit. Pairs with cachebench."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Rao Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = [
  "ai",
  "llm",
  "anthropic",
  "claude",
  "prompt-cache",
  "cache",
  "latency",
  "cost",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/prompt-cache-warmer"
Source = "https://github.com/MukundaKatta/prompt-cache-warmer"
Issues = "https://github.com/MukundaKatta/prompt-cache-warmer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_cache_warmer"]
